remaining single click disable all buttons an final score

--- a/index.css
+++ b/index.css
@@ -7,3 +7,15 @@
 .nxt-btn{
     display: none;
 }
+
+.correct, .active{
+    background-color: greenyellow;
+}
+
+.incorrect{
+    background-color: red;
+}
+
+.score-board{
+    display: none;
+}
